SSCSCI-2420: remove redundant s2s-auth checks