@@ -1,16 +1,15 @@
 package uk.gov.hmcts.reform.sscs.controller;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.equalTo;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.reform.sscs.service.SubmitAppealServiceBase.DM_STORE_USER_ID;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.core.TreeNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
@@ -19,12 +18,10 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.ResponseEntity;
+import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.web.multipart.MultipartFile;
 import uk.gov.hmcts.reform.ccd.document.am.model.Classification;
-import uk.gov.hmcts.reform.document.domain.Document;
 import uk.gov.hmcts.reform.document.domain.UploadResponse;
-import uk.gov.hmcts.reform.sscs.bulkscan.exceptions.ForbiddenException;
-import uk.gov.hmcts.reform.sscs.ccd.exception.CcdException;
 import uk.gov.hmcts.reform.sscs.exception.EvidenceDocumentsMissingException;
 import uk.gov.hmcts.reform.sscs.exception.FileToPdfConversionException;
 import uk.gov.hmcts.reform.sscs.idam.IdamService;
@@ -37,21 +34,12 @@ import uk.gov.hmcts.reform.sscs.service.conversion.FileToPdfConversionService;
 @ExtendWith(MockitoExtension.class)
 public class EvidenceManagementControllerTest {
 
-    private static final String SERVICE_AUTH = "service-auth";
-    private static final String SERVICE_NAME = "sscs";
-
     @Mock
     private EvidenceManagementService evidenceManagementService;
-
     @Mock
     private EvidenceManagementSecureDocStoreService evidenceManagementSecureDocStoreService;
-
     @Mock
     private IdamService idamService;
-
-    @Mock
-    private AuthorisationService authorisationService;
-
     @Mock
     private FileToPdfConversionService fileToPdfConversionService;
 
@@ -59,120 +47,126 @@ public class EvidenceManagementControllerTest {
 
     @BeforeEach
     public void setUp() {
-        controller = new EvidenceManagementController(evidenceManagementService, evidenceManagementSecureDocStoreService, fileToPdfConversionService, false, null, authorisationService);
+        controller = new EvidenceManagementController(evidenceManagementService,
+                evidenceManagementSecureDocStoreService, fileToPdfConversionService, false, null);
     }
 
     @Test
-    public void shouldThrowEvidenceDocumentsMissingExceptionIfThereAreNoFilesInTheRequest() throws JsonProcessingException {
-        when(authorisationService.authenticate(SERVICE_AUTH)).thenReturn(SERVICE_NAME);
-
-        assertThrows(EvidenceDocumentsMissingException.class, () -> controller.upload(SERVICE_AUTH, null));
+    public void shouldThrowEvidenceDocumentsMissingExceptionIfThereAreNoFilesInTheRequest() {
+        assertThrows(EvidenceDocumentsMissingException.class, () -> controller.upload(null));
     }
 
     @Test
-    public void shouldThrowEvidenceDocumentsMissingExceptionForEmptyFileList() throws JsonProcessingException {
-        when(authorisationService.authenticate(SERVICE_AUTH)).thenReturn(SERVICE_NAME);
-
-        assertThrows(EvidenceDocumentsMissingException.class, () -> controller.upload(SERVICE_AUTH, Collections.emptyList()));
+    public void shouldThrowEvidenceDocumentsMissingExceptionForEmptyFileList() {
+        assertThrows(EvidenceDocumentsMissingException.class, () -> controller.upload(Collections.emptyList()));
     }
 
     @Test
     public void shouldUploadEvidenceDocumentList() throws JsonProcessingException {
-        UploadResponse uploadResponse = mock(UploadResponse.class);
-        UploadResponse.Embedded uploadResponseEmbedded = mock(UploadResponse.Embedded.class);
+        String jsonPayload = """
+                {
+                    "_embedded": {
+                      "documents": [
+                        {
+                          "classification": null,
+                          "size": 656,
+                          "mimeType": "application/pdf",
+                          "originalDocumentName": "docname",
+                          "createdBy": null,
+                          "modifiedOn": null,
+                          "createdOn": null,
+                          "_links": {
+                            "self": {"href": "selfURL"},
+                            "binary": {"href": "binaryUrl"}
+                          }
+                        }
+                      ]
+                    }
+                }
+                """;
 
-        when(uploadResponse.getEmbedded()).thenReturn(uploadResponseEmbedded);
-        Document document = new Document();
-        document.mimeType = "application/pdf";
-        document.size = 656;
-        document.originalDocumentName = "docname";
-        Document.Links links = new Document.Links();
-        links.binary = new Document.Link();
-        links.self = new Document.Link();
-        links.binary.href = "binaryUrl";
-        links.self.href = "selfURL";
-        document.links = links;
+        UploadResponse uploadResponse = new ObjectMapper().readValue(jsonPayload, UploadResponse.class);
 
-        when(uploadResponse.getEmbedded().getDocuments()).thenReturn(Collections.singletonList(document));
-        MultipartFile file = mock(MultipartFile.class);
-        List<MultipartFile> files = Collections.singletonList(file);
+        List<MultipartFile> files = List.of(new MockMultipartFile("file", "file".getBytes()));
         when(fileToPdfConversionService.convert(files)).thenReturn(files);
         when(evidenceManagementService.upload(files, DM_STORE_USER_ID)).thenReturn(uploadResponse);
-        when(authorisationService.authenticate(SERVICE_AUTH)).thenReturn(SERVICE_NAME);
 
-        ResponseEntity<String> actualUploadResponseEmbedded = controller.upload(SERVICE_AUTH, files);
-
-        String json = "{\"documents\": [{\"classification\":null,\"size\":656,\"mimeType\":\"application/pdf\",\"originalDocumentName\":\"docname\",\"createdBy\":null,\"modifiedOn\":null,\"createdOn\":null,\"_links\":{\"self\":{\"href\":\"selfURL\"},\"binary\":{\"href\":\"binaryUrl\"}}}]}";
+        ResponseEntity<String> actualUploadResponseEmbedded = controller.upload(files);
 
         verify(evidenceManagementService, times(1)).upload(files, DM_STORE_USER_ID);
-        assertThat(actualUploadResponseEmbedded.getBody(), equalTo(json));
-        verify(authorisationService).authenticate(SERVICE_AUTH);
-        verify(authorisationService).allowOnlySscs(SERVICE_NAME);
+        assertEquals(getJsonObj(jsonPayload).get("_embedded"), getJsonObj(actualUploadResponseEmbedded.getBody()));
     }
 
     @Test
-    public void shouldUploadEvidenceDocumentListSecureDocStore() throws JsonProcessingException {
-        controller = new EvidenceManagementController(evidenceManagementService, evidenceManagementSecureDocStoreService, fileToPdfConversionService, true, idamService, authorisationService);
+    public void shouldUploadEvidenceDocumentListSecureDocStore() throws Exception {
+        controller =
+                new EvidenceManagementController(evidenceManagementService, evidenceManagementSecureDocStoreService,
+                        fileToPdfConversionService, true, idamService);
+        String json = """
+                  { "documents":
+                    [
+                        {
+                          "classification": "PUBLIC",
+                          "size": 656,
+                          "mimeType": "application/pdf",
+                          "originalDocumentName": "docname",
+                          "createdOn": null,
+                          "modifiedOn": null,
+                          "createdBy": null,
+                          "lastModifiedBy": null,
+                          "ttl": null,
+                          "hashToken": null,
+                          "metadata": null,
+                          "_links": {
+                            "self": {"href": "selfURL"},
+                            "binary": {"href": "binaryUrl"}
+                          }
+                        }
+                    ]
+                  }
+                """;
 
-        uk.gov.hmcts.reform.ccd.document.am.model.Document.Links links = new uk.gov.hmcts.reform.ccd.document.am.model.Document.Links();
+        var links = new uk.gov.hmcts.reform.ccd.document.am.model.Document.Links();
         links.binary = new uk.gov.hmcts.reform.ccd.document.am.model.Document.Link();
         links.self = new uk.gov.hmcts.reform.ccd.document.am.model.Document.Link();
         links.binary.href = "binaryUrl";
         links.self.href = "selfURL";
 
-        uk.gov.hmcts.reform.ccd.document.am.model.Document document =
-                uk.gov.hmcts.reform.ccd.document.am.model.Document.builder()
-                        .size(656L)
-                        .mimeType("application/pdf")
-                        .originalDocumentName("docname")
-                        .classification(Classification.PUBLIC)
-                        .links(links)
-                        .build();
+        var document = uk.gov.hmcts.reform.ccd.document.am.model.Document.builder()
+                .size(656L)
+                .mimeType("application/pdf")
+                .originalDocumentName("docname")
+                .classification(Classification.PUBLIC)
+                .links(links)
+                .build();
 
-        uk.gov.hmcts.reform.ccd.document.am.model.UploadResponse uploadResponse =
-                mock(uk.gov.hmcts.reform.ccd.document.am.model.UploadResponse.class);
-        when(uploadResponse.getDocuments()).thenReturn(Collections.singletonList(document));
-        MultipartFile file = mock(MultipartFile.class);
-        List<MultipartFile> files = Collections.singletonList(file);
+        var uploadResponse = new uk.gov.hmcts.reform.ccd.document.am.model.UploadResponse(List.of(document));
+        List<MultipartFile> files = List.of(new MockMultipartFile("file", "file".getBytes()));
         when(fileToPdfConversionService.convert(files)).thenReturn(files);
 
         IdamTokens idamTokens = IdamTokens.builder().build();
         when(idamService.getIdamTokens()).thenReturn(idamTokens);
-        when(authorisationService.authenticate(SERVICE_AUTH)).thenReturn(SERVICE_NAME);
 
         when(evidenceManagementSecureDocStoreService.upload(files, idamTokens)).thenReturn(uploadResponse);
 
-        ResponseEntity<String> actualUploadResponseEmbedded = controller.upload(SERVICE_AUTH, files);
+        ResponseEntity<String> actualUploadResponseEmbedded = controller.upload(files);
 
-        String json = "{\"documents\": [{\"classification\":\"PUBLIC\",\"size\":656,\"mimeType\":\"application/pdf\",\"originalDocumentName\":\"docname\",\"createdOn\":null,\"modifiedOn\":null,\"createdBy\":null,\"lastModifiedBy\":null,\"ttl\":null,\"hashToken\":null,\"metadata\":null,\"_links\":{\"self\":{\"href\":\"selfURL\"},\"binary\":{\"href\":\"binaryUrl\"}}}]}";
 
         verify(evidenceManagementSecureDocStoreService, times(1)).upload(files, idamTokens);
-        assertThat(actualUploadResponseEmbedded.getBody(), equalTo(json));
-        verify(authorisationService).authenticate(SERVICE_AUTH);
-        verify(authorisationService).allowOnlySscs(SERVICE_NAME);
+        assertEquals(getJsonObj(json), getJsonObj(actualUploadResponseEmbedded.getBody()));
     }
 
     @Test
-    public void shouldUploadEvidenceDocumentListLogsParseException() throws JsonProcessingException {
+    public void shouldUploadEvidenceDocumentListLogsParseException() {
+        List<MultipartFile> files = List.of(new MockMultipartFile("file1", "file1".getBytes()));
 
-        MultipartFile file = mock(MultipartFile.class);
-        List<MultipartFile> files = Collections.singletonList(file);
-
-        when(authorisationService.authenticate(SERVICE_AUTH)).thenReturn(SERVICE_NAME);
         when(fileToPdfConversionService.convert(files)).thenThrow(
             new FileToPdfConversionException("Conversion to PDF error", new RuntimeException()));
 
-        assertThrows(FileToPdfConversionException.class, () -> controller.upload(SERVICE_AUTH, files));
+        assertThrows(FileToPdfConversionException.class, () -> controller.upload(files));
     }
 
-    @Test
-    public void testToThrowForbiddenExceptionForUnauthorizedService() throws CcdException {
-        String serviceAuth = "unauthorized-service-auth";
-        String serviceName = "unauthorized-service";
-        when(authorisationService.authenticate(serviceAuth)).thenReturn(serviceName);
-        doThrow(new ForbiddenException("Service " + serviceName + " is not authorized for this action"))
-                .when(authorisationService).allowOnlySscs(serviceName);
-
-        assertThrows(ForbiddenException.class, () -> controller.upload(serviceAuth, null));
+    private TreeNode getJsonObj(String expectedJson) throws JsonProcessingException {
+        return new ObjectMapper().readTree(expectedJson);
     }
 }
